// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo: Match snapshots 1 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Thin",
          "fontSize": 20,
        },
        Object {
          "color": "#17212D",
        },
      ]
    }
  >
    Steg
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/logo-light.png",
      }
    }
    style={
      Object {
        "height": 25,
        "width": 25,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Thin",
          "fontSize": 20,
        },
        Object {
          "color": "#17212D",
        },
      ]
    }
  >
    ppasaurus
  </Text>
</View>
`;

exports[`Logo: Match snapshots 2 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Thin",
          "fontSize": 20,
        },
        Object {
          "color": "#FFF",
        },
      ]
    }
  >
    Steg
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/logo-dark.png",
      }
    }
    style={
      Object {
        "height": 25,
        "width": 25,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontFamily": "Roboto-Thin",
          "fontSize": 20,
        },
        Object {
          "color": "#FFF",
        },
      ]
    }
  >
    ppasaurus
  </Text>
</View>
`;
